# motes

./: .flake8  .gitignore  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  motes.py  motes.yml  motesparams.txt  pyproject.toml  reg.txt
.github/workflows/: delete-old-runs.yml  docs-cicd.yml  first.yml  labeler.yml  linting.yml  motes-cicd.yml  motes.yml  welcome.yml
cicd/: motes-cicd.yml
conda/: mkdocs.yml  motes.yml
default/: motesparams.txt  reg.txt
demo_data/fors2/: motesparams.txt  reg.txt  scrap.py
demo_data/gmos/: motesparams.txt  reg.txt
demo_data/xshooter/: motesparams.txt  reg.txt
docs/: explanation.md  index.md  quickstart.md  reference-common.md  reference-core.md  reference-harvester.md  reference-motes.md  reference-startup.md
instrument_io/: instrument_io_instructions.md  instrumentio.py
motes/: common.py  diagnostics.py  harvester.py  logs.py  motes.py  startup.py  tracing.py
motes/motesio/: floydsio.py  motesio.py  xshooio.py
requirements/: mkdocs.txt
src/: motes.py  xmotes.py
src/motes/: common.py  core.py  diagnostics.py  extraction.py  harvester.py  logs.py  notes.py  sky.py  startup.py  tracing.py
src/motes/io/: floydsio.py  forsio.py  gmosio.py  motesio.py  xshooio.py
src/motesio/: floydsio.py  forsio.py  gmosio.py  motesio.py  xshooio.py
src/motessky/: sky.py
