[project]
name = "motes"
version = "0.4.7"
description = "A Modular, Optimised Tracer and Extractor of Spectra"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy"
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "Tom Seccull", email = "tom.seccull@proton.me"},
    {name = "Dominik Kiersz", email = "dakiersz.p8df5@passmail.com"}]
keywords = ["spectroscopy", "astronomy", "science", "data", "analysis", "modular", "optimised", "tracer", "extractor"]
requires-python = ">=3.9.0"
dependencies = [
    'pip ~= 24.0.0',
    'matplotlib ~= 3.8.3',
    'astropy ~= 6.0.0',
    'numpy ~= 1.26.4',
    'scipy ~= 1.12.0'
]

[project.optional-dependencies]
dev = ['pylint ~= 3.1.0',
    'flake8 ~= 7.0.0',
    'bandit ~= 1.7.7',
    'black ~= 24.2.0'
]

[project.urls]
Repository = "https://github.com/tseccull/motes"

[tool.pylint]
max-line-length = 127
fail-under = 8.0

[tool.black]
line-length = 127
